IME does not work properly on a wlroots based wayland compositor #114210
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#114210
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Linux-6.5.9-arch2-1-x86_64-with-glibc2.38 64 Bits, WAYLAND UI
Graphics card: AMD Radeon Graphics (renoir, LLVM 16.0.6, DRM 3.54, 6.5.9-arch2-1) AMD 4.6 (Core Profile) Mesa 23.2.1-arch1.2
Blender Version
Broken: version: 4.1.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash:
Unknown
(git commitd31c61edee
main branch)Worked: never worked
Short description of error
IME support does not work properly with wlroots-based wayland compositors such as sway.
Text is typed twice and deleting does not work. Other keys like backspace or esc do not work either, and other input languages are ignored even if I switch to them. Sometimes all text is removed after I move to another text field (First video).
Tested environment:
Fcitx5 version: 5.1.1
Fcitx5 modules: anthy (5.1.1), hangul(5.1.0)
Sway version: 1.8.1
Wlroots version: 0.16.2
Exact steps for others to reproduce the error
a38a49b073
Blender was crashed with this error when I tested it. But I couldn't reproduce it.
It happened when I clicked on the text field filled with "TexDraw" on the Texture Paint tab.
This issue is different with #114208 because this issue is you can at least test blender has some conntection with IME.
This patch
a38a49b073
is usingtext-input-unstable-v3
And wlroots also supports
text-input-unstable-v3
Reference: https://gitlab.freedesktop.org/wayland/wayland-protocols/-/issues/39#implementation-matrix
With the PR (#127824), input method works ok on wayland (
zwp_text_input_v3
protocol).This works on GNOME wayland with ibus input method framework.
Now it's time to test that if this PR fix this issue.
Test builds of proposed fix by @secext2022 are now available. Testing much welcome! :D